Adiciona filtro de trimestres

--- a/src/App.css
+++ b/src/App.css
@@ -426,7 +426,7 @@ body{
 .tecnico{
   position: relative;
   padding: 40px 0;
-  margin-left: 14%;
+  margin-left: 0 auto;
 }
 
 .tecnico h2{
@@ -513,3 +513,36 @@ body{
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
+.trimestre{
+  font-size: 16px;
+  position: relative;
+  margin: auto;
+  padding: 1em 2.5em 1em 2.5em;
+  border: none;
+  transition: all 0.1s linear;
+  box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.1);
+  background-color: #333;
+}
+.trimestre:active{
+  transform: scale(0.95);
+}
+.trimestre span {
+  color: #ffffff;
+ }
+ .trimestre .border {
+  position: absolute;
+  transition: all 0.3s 0.08s linear;
+  top: 50%;
+  left: 50%;
+  width: 9em;
+  height: 3em;
+  transform: translate(-50%, -50%);
+ }
+ .trimestre:hover .border {
+  display: block;
+  width: 9.9em;
+  height: 3.7em;
+ }
+ .full-rounded {
+  border-radius: 2em;
+ }
