Adiciona zoom em currículo

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,10 @@ body{
   width: 30%;
   height: 30%;
 }
+.curriculo:hover {
+  transform: scale(1.4);
+  transition: transform 0.4s ease;
+}
 .download{
   width: 5%;
   height: 5%;
