--- a/src/App.css
+++ b/src/App.css
@@ -379,8 +379,10 @@ body{
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
-  width: 400px;
-  height: 400px;
+  width: auto;
+  height: auto;
+  max-height: 400px;
+  max-width: 400px;
 }
 
 .proj-imgbx::before{
