--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ body{
 }
 .Curriculo{
   text-align: center;
+  margin-top: 20px;
 }
 .curriculo{
   margin-bottom: 20px;
@@ -99,6 +100,9 @@ body{
 .download{
   width: 5%;
   height: 5%;
+  margin-left: 7%;
+  margin-top: -200px;
+
 }
 .download:hover{
   cursor:pointer
@@ -285,6 +289,8 @@ body{
 .project{
   position: relative;
   padding: 40px 0;
+  margin: 0 auto; /* Centraliza horizontalmente */
+  max-width: 1200px; /* Largura máxima */
 }
 
 .project h2{
