Atualiza css das atividades

--- a/src/App.css
+++ b/src/App.css
@@ -287,10 +287,20 @@ body{
   transition: box-shadow 0.2s ease-in;
 }
 
+.row {
+  margin: 0;
+}
+
+.col {
+  padding: 0;
+  margin: 0;
+}
+
 .project{
   padding: 90px 0;
   position: relative;
-  width: 100%;
+  width: 195vh;
+  max-width: 100%;
 }
 
 .project h2{
@@ -309,12 +319,22 @@ body{
   width: 56%;
 }
 
+.materias-wrapper .row {
+  width: 180vh;
+}
+
+.tecnico-wrapper .row {
+  width: 180vh;
+}
+
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
   border-radius: 50px;
   background-color: rgb(255, 255, 255 / 10%);
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .project .nav.nav-pills .nav-item{
@@ -385,7 +405,22 @@ body{
   overflow: hidden;
   width: 54%;
   height: 70%;
-  margin: auto;  
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+}
+
+.proj-imgbx img {
+  width: 400px;
+  height: auto;
+  object-fit: cover; /* Faz com que a imagem cubra a área, centrando no meio */
+  margin: 0;
+  padding: 0;
+  min-height: 400px;
+}
+
+.proj-imgbx:empty {
+  display: none;
 }
 
 .proj-imgbx::before{
@@ -411,6 +446,8 @@ body{
   transition: 0.5s ease-in-out;
   opacity: 0;
   width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .proj-imgbx:hover .proj-txtx{
