Retira comentários do css

--- a/src/App.css
+++ b/src/App.css
@@ -1,156 +1,4 @@
-/* body{
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-}
-#root {
-  padding: 2rem;
-}
-.contato {
-  display: flex;
-  flex-direction: row;
-  display: inline-block;
-  margin-left: 30%;
-}
-.logo {
-  height: 40px;  
-}
-.pagina {
-  display: grid;
-  place-items: center;
-  margin-top: 40px;
-} */
 
-/* /* .typewriter{
-  width: 27ch;
-  animation: typing 2s steps(30), blink .5s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  border-right: 3px solid #04AA6D;
-  font-family: monospace;
-  font-size: 2em;
-} */
-@keyframes typing {
-  from { width: 0 }
-}
-@keyframes blink {
-  50% {
-    border-color: transparent}
-} */
-
-/* .topnav {
-  width:100%;
-	height: 55px;
-  overflow: hidden;
-	background-color:#666;
-	border-radius: 14px;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 10px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  height: 54px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-} */
-
-/* .home{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.container {
-  display: flex;
-  justify-content: space-between;
-}
-
-.sobre {
-  width: 50%;
-  text-align: left;
-  padding: 20px;
-  margin-top: 140px;
-}
-
-.fotoperfil {
-  width: 50%;
-}
-.Curriculo{
-  text-align: center;
-  margin-top: 20px;
-}
-.curriculo{
-  margin-bottom: 20px;
-  width: 30%;
-  height: 30%;
-}
-.curriculo:hover {
-  transform: scale(1.4);
-  transition: transform 0.4s ease;
-}
-.download{
-  width: 5%;
-  height: 5%;
-  margin-left: 7%;
-  margin-top: -200px;
-
-}
-.download:hover{
-  cursor:pointer
-} */
-/* .skills {
-  width: 410px;
-  height: 254px;
-  border-radius: 4px;
-  display: flex;
-  gap: 5px;
-  padding: .4em;
-  margin: 0 auto;
-}
-
-.skills p {
-  height: 100%;
-  flex: 1;
-  overflow: hidden;
-  cursor: pointer;
-  border-radius: 2px;
-  transition: all .5s;
-  border: 1px solid #04AA6D;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.skills p:hover {
-  flex: 4;
-}
-
-.skills p span {
-  min-width: 14em;
-  padding: .5em;
-  text-align: center;
-  transform: rotate(-90deg);
-  transition: all .5s;
-  text-transform: uppercase;
-  color: #04AA6D;
-  letter-spacing: .1em;
-}
-
-.skills p:hover span {
-  transform: rotate(0);
-} */
  
 .portfolio{
   position: relative;
@@ -394,7 +242,7 @@
 .proj-imgbx img {
   width: 400px;
   height: auto;
-  object-fit: cover; /* Faz com que a imagem cubra a área, centrando no meio */
+  object-fit: cover;
   margin: 0;
   padding: 0;
   min-height: 400px;
