--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+@keyframes typing {
+  from { width: 0 }
+}
+@keyframes blink {
+  50% {
+    border-color: transparent}
+}
 
- 
 .portfolio{
   position: relative;
   padding: 10px 20px;
